<resources>
    <string name="app_name">OPwar</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancelar</string>
    <string name="save">GUARDAR</string>
    <string name="type_name_list">Escribe el título</string>
    <string name="selecciona_ejercito">Selecciona un ejército</string>
    <string name="ejercito">Ejército</string>
    <string name="limite_puntos">Límite de puntos</string>
    <string name="cero">0</string>
    <string name="comandantes">x COMANDANTES</string>
    <string name="comandantes_x">COMANDANTES</string>
    <string name="unidades_basicas">x UNIDADES BÁSICAS</string>
    <string name="unidades_basicas_x">UNIDADES BÁSICAS</string>
    <string name="unidades_especiales">x UNIDADES ESPECIALES</string>
    <string name="unidades_especiales_x">UNIDADES ESPECIALES</string>
    <string name="unidades_singulares">x UNIDADES SINGULARES</string>
    <string name="unidades_singulares_x">UNIDADES SINGULARES</string>
    <string name="anadir_comandante">Añadir comandante</string>
    <string name="anadir_unidad_basica">Añadir unidad básica</string>
    <string name="anadir_unidad_especial">Añadir unidad especial</string>
    <string name="anadir_unidad_singular">Añadir unidad singular</string>
    <string name="puntos_totales">PUNTOS TOTALES</string>
    <string name="sin_listas">No hay listas guardadas</string>
    <string name="sin_conexion">No tienes conexión</string>
    <string name="cargando_ejercitos">Cargando ejércitos…</string>
    <string name="escoge_ejercito">Escoge un ejército</string>
    <string name="cargando_unidades">Cargando unidades…</string>
    <string name="rellena_puntos">Rellena los puntos</string>
    <string name="escoge_comandante">Escoge un comandante</string>
    <string name="supera_puntos">Superas los puntos permitidos</string>
    <string name="escoge_unidad_basica">Escoge una unidad básica</string>
    <string name="escoge_unidad_especial">Escoge una unidad especial</string>
    <string name="escoge_unidad_singular">Escoge una unidad singular</string>
    <string name="borrar_unidad">Borra una unidad</string>
    <string name="listas_guardadas">Listas guardadas</string>
    <string name="erros_cargar_lista">Ups, no podemos cargar la lista</string>
    <string name="aceptar">Aceptar</string>
    <string name="movimiento">M</string>
    <string name="habilidad_armas">HA</string>
    <string name="habilidad_proyectiles">HP</string>
    <string name="fuerza">F</string>
    <string name="resistencia">R</string>
    <string name="heridas">H</string>
    <string name="iniciativa">I</string>
    <string name="ataques">A</string>
    <string name="liderazgo">L</string>
    <string name="puntos_unidad">Pts/Ud</string>
    <string name="ordenar">Ordenar</string>
    <string name="ordenar_nombre">Ordenar por nombre</string>
    <string name="ordenar_puntos">Ordenar por puntos</string>
    <string name="ordenar_fecha_creacion">Ordenar por fecha de creación</string>
    <string name="ordenar_victorias">Ordenar por victorias</string>
    <string name="ordenar_porcentaje">Ordenar por V/D</string>
    <string name="modo_batalla">Modo batalla</string>
    <string name="cancelar">Cancelar</string>
    <string name="finalizar">Finalizar</string>
</resources>