<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.InfoRegimiento">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_lista_war_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:paddingEnd="10dp">
                <ImageButton
                    android:contentDescription="@string/cancel"
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_clear_white"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_alignParentStart="true"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/btSave"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/aceptar"
                    android:textColor="@color/colorWhite"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_toStartOf="@+id/clear" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="Unidad"
            android:id="@+id/tvNombreUnidad" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:gravity="center">
                <TextView
                    android:text="@string/movimiento"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/habilidad_armas"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/habilidad_proyectiles"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/fuerza"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/resistencia"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/heridas"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/iniciativa"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/ataques"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/liderazgo"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/puntos_unidad"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:gravity="center">
                <TextView
                    android:id="@+id/tvMovimiento"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvHabilidadArmas"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvHabilidadProyectiles"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvFuerza"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvResistencia"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvHeridas"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvIniciativa"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvAtaques"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvLiderazgos"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:id="@+id/tvPuntos"
                    android:gravity="center"
                    android:padding="3dip" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="6dip"
                android:text="Tamaño de la unidad:"/>
            <TextView
                android:id="@+id/tvTamanyoUnidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="0"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/btPlus1Unidad" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/btMinus1Unidad" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="6dip"
                android:text="Puntos totales unidad:"/>
            <TextView
                android:id="@+id/tvPuntosUnidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
