<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.ListaWarActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_lista_war_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:paddingEnd="10dp">
                <ImageButton
                    android:contentDescription="@string/cancel"
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_clear_white"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_alignParentStart="true"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_toStartOf="@+id/clear" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type_name_list"
                android:textColorHint="@color/colorWhite"
                android:background="@android:color/transparent"
                android:padding="16dp"
                android:textSize="6pt"
                android:inputType="textCapSentences" />
            <EditText
                android:id="@+id/limite_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/limite_puntos"
                android:inputType="number"
                android:textSize="5.5pt"
                android:gravity="right"
                android:padding="16dp"
                android:maxLength="4"
                android:paddingEnd="22dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorWhite">
            <TextView
                android:id="@+id/ejercito_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/selecciona_ejercito"
                android:padding="16dp"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack" />
            <TextView
                android:id="@+id/cuentaTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/puntos_totales"
                android:padding="16dp"
                android:paddingEnd="22dp"
                android:gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight">
                <TextView
                    android:id="@+id/cuentaComandantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/colorBlack"
                    android:background="@color/colorPrimaryLight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comandantes"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/cuentaComandantes" />
                <ImageButton
                    android:id="@+id/anadir_comandante"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/anadir_comandante" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@+id/listviewComandantes"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight">

                <TextView
                    android:id="@+id/cuentaUnidadesBasicas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/colorBlack"
                    android:background="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidades_basicas"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/cuentaUnidadesBasicas" />

                <ImageButton
                    android:id="@+id/anadir_unidad_basica"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/anadir_unidad_basica" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@+id/listviewUnidadesBasicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight">

                <TextView
                    android:id="@+id/cuentaUnidadesEspeciales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/colorBlack"
                    android:background="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidades_especiales"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/cuentaUnidadesEspeciales" />

                <ImageButton
                    android:id="@+id/anadir_unidad_especial"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/anadir_unidad_especial" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@+id/listviewUnidadesEspeciales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryLight">

                <TextView
                    android:id="@+id/cuentaUnidadesSingulares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cero"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/colorBlack"
                    android:background="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidades_singulares"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/cuentaUnidadesSingulares" />

                <ImageButton
                    android:id="@+id/anadir_unidad_singular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/anadir_unidad_singular" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@+id/listviewUnidadesSingulares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>